calls again BMimeType::GuessMimeType() in BackgroundsView (was only called in the ImagePanel filter) should fix bug #1101

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20400 a95241bf-73f2-0310-859d-f6bbb57e9c96